--- a/draft-samizadeh-bmwg-cni-benchmarking-00.html
+++ b/draft-samizadeh-bmwg-cni-benchmarking-00.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta content="Common,Latin" name="scripts">
 <meta content="initial-scale=1.0" name="viewport">
-<title></title>
+<title>CNI Telco-Cloud Benchmarking Considerations</title>
 <meta content="Tina Samizadeh" name="author">
 <meta content="George Koukis" name="author">
 <meta content="Rute C. Sofia" name="author">
@@ -1224,7 +1224,7 @@ li > p:last-of-type:only-child {
 <table class="ears">
 <thead><tr>
 <td class="left">Internet-Draft</td>
-<td class="center">CNI Benchmarking</td>
+<td class="center">CNI Telco-Cloud Benchmarking</td>
 <td class="right">July 2025</td>
 </tr></thead>
 <tfoot><tr>
@@ -1273,7 +1273,7 @@ li > p:last-of-type:only-child {
 </dd>
 </dl>
 </div>
-<h1 id="title"></h1>
+<h1 id="title">CNI Telco-Cloud Benchmarking Considerations</h1>
 <section id="section-abstract">
       <h2 id="abstract"><a href="#abstract" class="selfRef">Abstract</a></h2>
 <p id="section-abstract-1"> 
